@@ -1,5 +1,6 @@
 4.1.10
 - Bugfix: Prevent a fatal in the scalar callback analysis.
+- Bugfix: Class meta analysis thinks that interfaces are abstract.
 
 4.1.9
 - Added Support for the PHP 8 cUrl handle class.
